# protocol_emulator

./: CMakeLists.txt  README.md
src/: protocol_simulator.c  protocol_simulator.h
src/helpers/queue/: mutex_queue.c  mutex_queue.h
src/helpers/socket/: win_socket.c  win_socket.h
src/interface/gpio/: gpio.c  gpio.h
src/interface/usart/: usart.c  usart.h
